minijinja/tests/snapshots/test_templates__vm@loop_bad_unpacking_wrong_len.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "<ul>\n{% for a, b in seq %}\n  <li>{{ a }}: {{ b }}\n{% endfor %}\n</ul>"
info:
  seq:
    - - 1
      - 2
      - 3
    - - 2
      - 3
      - 4
    - - 3
      - 4
      - 5
input_file: minijinja/tests/inputs/loop_bad_unpacking_wrong_len.txt
---
!!!ERROR!!!

Error {
    kind: CannotUnpack,
    detail: "sequence of wrong length (expected 2, got 3)",
    name: "loop_bad_unpacking_wrong_len.txt",
    line: 2,
}

cannot unpack: sequence of wrong length (expected 2, got 3) (in loop_bad_unpacking_wrong_len.txt:2)
---------------------- loop_bad_unpacking_wrong_len.txt -----------------------
   1 | <ul>
   2 > {% for a, b in seq %}
     i        ^^^^ cannot unpack
   3 |   <li>{{ a }}: {{ b }}
   4 | {% endfor %}
   5 | </ul>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    loop: Loop {
        len: Some(
            3,
        ),
        idx: 0,
        depth: 0,
    },
    seq: [
        [
            1,
            2,
            3,
        ],
        [
            2,
            3,
            4,
        ],
        [
            3,
            4,
            5,
        ],
    ],
}
-------------------------------------------------------------------------------
